gh-4365 Change more code to use CIKey, add more constants