@@ -20,6 +20,7 @@ import stroom.util.shared.GwtNullSafe;
 
 import java.util.Collection;
 import java.util.HashSet;
+import java.util.stream.Collectors;
 
 /**
  * A {@link HashSet} containing case-insensitive {@link CIKey} string values.
@@ -29,7 +30,7 @@ public class CIHashSet extends HashSet<CIKey> {
     public CIHashSet(final Collection<String> collection) {
         super(GwtNullSafe.stream(collection)
                 .map(CIKey::of)
-                .toList());
+                .collect(Collectors.toList()));
     }
 
     public boolean add(final String value) {
